<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.fernuni_hagen.kn.nlp</groupId>
  <artifactId>nlp-toolbox</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Hagen NLPToolbox</name>
  <description>Hagen NLPToolbox</description>

  <properties>
    <java.version>11</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <neo4j.version>4.2.1</neo4j.version>
    <dl4j.version>1.0.0-beta7</dl4j.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <!-- ASV Toolbox -->
    <dependency>
      <groupId>de.uni_leipzig.asv.toolbox</groupId>
      <artifactId>de.uni_leipzig.asv.toolbox.utils</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>de.uni_leipzig.asv.toolbox</groupId>
      <artifactId>de.uni_leipzig.asv.toolbox.baseforms</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>de.uni_leipzig.asv.toolbox</groupId>
      <artifactId>de.uni_leipzig.asv.toolbox.viterbitagger</artifactId>
      <version>1.0</version>
    </dependency>

    <!-- Neo4j -->
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j</artifactId>
      <version>${neo4j.version}</version>
    </dependency>

    <!-- Deeplearning4j -->
    <dependency>
      <groupId>org.deeplearning4j</groupId>
      <artifactId>deeplearning4j-core</artifactId>
      <version>${dl4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.nd4j</groupId>
      <artifactId>nd4j-native-platform</artifactId>
      <version>${dl4j.version}</version>
    </dependency>

    <dependency>
      <groupId>unknown.external.jar</groupId>
      <artifactId>text-processing</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>de.texttech.cc</groupId>
      <artifactId>cc</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-app</artifactId>
      <version>1.25</version>
    </dependency>

    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>

    <dependency>
      <groupId>gnu.getopt</groupId>
      <artifactId>java-getopt</artifactId>
      <version>1.0.13</version>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.4</version>
      <!-- originally used by deeplearning4j-core, but newest backwards compatible version -->
    </dependency>

    <!-- Commons -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.8.0</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
        <checksumPolicy>warn</checksumPolicy>
      </releases>
      <snapshots>
        <enabled>false</enabled>
        <updatePolicy>never</updatePolicy>
        <checksumPolicy>fail</checksumPolicy>
      </snapshots>
      <name>TU-Darmstadt Repository</name>
      <id>TU-Darmstadt</id>
      <url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases</url>
      <layout>default</layout>
    </repository>
  </repositories>
</project>
